--- a/backend/nestin/Nestin.Api/Nestin.Api.csproj
+++ b/backend/nestin/Nestin.Api/Nestin.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Nestin.Core\Nestin.Core.csproj" />
+    <ProjectReference Include="..\Nestin.Infrastructure\Nestin.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
