chore(backend): update appsettings.json template

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=nestin;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True" // Replace this dummy placeholder with your database connection
+  }
 }
