--- a/backend/nestin/Nestin.Infrastructure/Nestin.Infrastructure.csproj
+++ b/backend/nestin/Nestin.Infrastructure/Nestin.Infrastructure.csproj
@@ -14,6 +14,8 @@
     <Folder Include="Data\Migrations\" />
     <Folder Include="Data\Configurations\" />
     <Folder Include="Data\Seeds\" />
+    <Folder Include="Utils\" />
+    <Folder Include="Shared\" />
   </ItemGroup>
 
   <ItemGroup>
