--- a/backend/nestin/Nestin.Infrastructure/Nestin.Infrastructure.csproj
+++ b/backend/nestin/Nestin.Infrastructure/Nestin.Infrastructure.csproj
@@ -12,13 +12,15 @@
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
-    <Folder Include="Data\Configurations\" />
-    <Folder Include="Data\Seeds\" />
     <Folder Include="Utils\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
