chore(frontent): add ng-leaflet-universal

--- a/frontend/nestin/angular.json
+++ b/frontend/nestin/angular.json
@@ -25,8 +25,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/leaflet/dist/leaflet.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -81,8 +82,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/leaflet/dist/leaflet.css",
+              "src/styles.scss"
             ],
             "scripts": []
           }
