feat(backend): init Accounts resource

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -11,5 +11,10 @@
   },
   "Cors": {
     "Policy": "AllowAll"
+  },
+  "JWT": {
+    "Issuer": "your-app", // Replace with your actual issuer
+    "Audiance": "your-app", // Replace with your actual audience
+    "SigningKey": "your-very-strong-secret-key" // Replace with your Signing key
   }
 }
