--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -12,9 +12,10 @@
   "Cors": {
     "Policy": "AllowAll"
   },
-  "JWT": {
+  "Jwt": {
     "Issuer": "your-app", // Replace with your actual issuer
     "Audiance": "your-app", // Replace with your actual audience
-    "SigningKey": "your-very-strong-secret-key" // Replace with your Signing key
+    "SigningKey": "super-secret-signing-key-that-is-long-enough-123!", // Replace with your Signing key
+    "ExpirationInDays": 7
   }
 }
