--- a/frontend/nestin/package.json
+++ b/frontend/nestin/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:dev": "npx concurrently \"npm run format\" \"ng s -o\"",
+    "start:dev": "npx concurrently \"npm run format\" \"npm run json-server\" \"ng s -o\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "prettier --write src/**/*.ts"
+    "format": "prettier --write src/**/*.ts",
+    "json-server": "npx json-server --watch data.json --port 5050"
   },
   "private": true,
   "dependencies": {
