--- a/frontend/nestin/package.json
+++ b/frontend/nestin/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "bootstrap": "^5.3.5",
+    "leaflet": "^1.9.4",
     "lucide-angular": "^0.487.0",
     "nestin": "file:",
     "ng-leaflet-universal": "^15.2.8",
