feat(backend): complete config of FileUploadPathMapping

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -12,6 +12,9 @@
   "Cors": {
     "Policy": "AllowAll"
   },
+  "AppSettings": {
+    "BaseUrl": "http://localhost:5218" // Replace this with server url
+  },
   "Jwt": {
     "Issuer": "your-app", // Replace with your actual issuer
     "Audiance": "your-app", // Replace with your actual audience
