feat(backend): complete jwt authentication via cookies

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -17,7 +17,7 @@
   },
   "Jwt": {
     "Issuer": "your-app", // Replace with your actual issuer
-    "Audiance": "your-app", // Replace with your actual audience
+    "Audience": "your-app", // Replace with your actual audience
     "SigningKey": "super-secret-signing-key-that-is-long-enough-123!", // Replace with your Signing key
     "ExpirationInDays": 7
   }
