feat(backend): add FileStorage Service

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -20,5 +20,11 @@
     "Audience": "your-app", // Replace with your actual audience
     "SigningKey": "super-secret-signing-key-that-is-long-enough-123!", // Replace with your Signing key
     "ExpirationInDays": 7
+  },
+  "FileStorage": {
+    "WebRootPath": "wwwroot",
+    "ImageDirectory": "images",
+    "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
+    "MaxFileSizeMB": 5
   }
 }
