feat(backend): configure ratelimiting in memory and apply on register and login endpoints

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -26,5 +26,24 @@
     "ImageDirectory": "images",
     "AllowedExtensions": [ ".jpg", ".jpeg", ".png", ".gif" ],
     "MaxFileSizeMB": 5
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "POST:/api/v1/accounts/register",
+        "Period": "15m",
+        "Limit": 5
+      },
+      {
+        "Endpoint": "POST:/api/v1/accounts/login",
+        "Period": "30m",
+        "Limit": 5
+      }
+    ]
   }
 }
