--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=nestin;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True" // Replace this dummy placeholder with your database connection
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-V7KSUD0\\MSSQLSERVER01;Database=nestin;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True" // Replace this dummy placeholder with your database connection
+    },
   "Cors": {
     "Policy": "AllowAll"
   },
