fix(backend): allow trusted cors only

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -10,7 +10,11 @@
     "DefaultConnection": "Server=.;Database=nestin;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True" // Replace this dummy placeholder with your database connection
   },
   "Cors": {
-    "Policy": "AllowAll"
+    "Policy": "AllowTrusted", // to allow all use "AllowAll"
+    "AllowedOrigins": [
+      "https://localhost:7026", // swagger
+      "http://localhost:4200" // angular app
+    ]
   },
   "AppSettings": {
     "BaseUrl": "http://localhost:5218" // Replace this with server url
