fix(backend): fix open ai chat client configs

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -51,6 +51,7 @@
     ]
   },
   "OpenAI": {
-    "ApiKey":  "sk-your-api-key" // set your api key here
+    "ApiKey": "sk-your-api-key", // set your api key here
+    "ChatModel": "gpt-4o-mini"
   }
 }
