feat(backend): configure stripe sdk

--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -13,6 +13,7 @@
     "Policy": "AllowTrusted", // to allow all use "AllowAll"
     "AllowedOrigins": [
       "https://localhost:7026", // swagger
+      "https://*.ngrok.io", // ngrok
       "http://localhost:4200" // angular app
     ]
   },
@@ -53,5 +54,10 @@
   "OpenAI": {
     "ApiKey": "sk-your-api-key", // set your api key here
     "ChatModel": "gpt-4o-mini"
+  },
+  "Stripe": {
+    "SecretApiKey": "sk-your-api-key", // set your secret api key of stripe here
+    "SuccessUrl": "http://localhost:4200/success", // The page URL used to redirect to it on success
+    "CancelUrl": "http://localhost:4200/cancel" // The page URL used to redirect to it on cancel
   }
 }
