--- a/frontend/nestin/angular.json
+++ b/frontend/nestin/angular.json
@@ -28,7 +28,9 @@
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
