--- a/frontend/nestin/package.json
+++ b/frontend/nestin/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "bootstrap": "^5.3.5",
     "lucide-angular": "^0.487.0",
     "nestin": "file:",
