--- a/frontend/nestin/package.json
+++ b/frontend/nestin/package.json
@@ -27,6 +27,8 @@
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "bootstrap": "^5.3.5",
     "lucide-angular": "^0.487.0",
     "nestin": "file:",
