--- a/frontend/nestin/angular.json
+++ b/frontend/nestin/angular.json
@@ -27,7 +27,8 @@
             "styles": [
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss",
-              "https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+              "https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
