--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -58,7 +58,7 @@
   "Stripe": {
     "SecretApiKey": "sk-your-api-key", // set your secret api key of stripe here
     "WebHookSecretKey": "whsec_...", // set your stripe webhook secrect key
-    "SuccessUrl": "http://localhost:4200/success", // The page URL used to redirect to it on success
-    "CancelUrl": "http://localhost:4200/cancel" // The page URL used to redirect to it on cancel
+    "SuccessUrl": "http://localhost:4200/home?paymentStatus=success", // The page URL used to redirect to it on success
+    "CancelUrl": "http://localhost:4200/home?paymentStatus=canceled" // The page URL used to redirect to it on cancel
   }
 }
