--- a/frontend/nestin/package.json
+++ b/frontend/nestin/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.5",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -31,9 +32,13 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "bootstrap": "^5.3.5",
+    "google-libphonenumber": "^3.2.40",
+    "leaflet": "^1.9.4",
     "lucide-angular": "^0.487.0",
     "nestin": "file:",
     "ng-leaflet-universal": "^15.2.8",
+    "ngx-bootstrap": "^19.0.2",
+    "ngx-intl-tel-input": "^17.0.0",
     "ngx-lightbox": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -44,6 +49,7 @@
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.17",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
     "jasmine-core": "~5.6.0",
