--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=nestin;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True" // Replace this dummy placeholder with your database connection
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-GKLS84P\\SQLEXPRESS;Initial Catalog=Final_Project;Integrated Security=True;Encrypt=True;Trust Server Certificate=True" // Replace this dummy placeholder with your database connection
+    },
   "Cors": {
     "Policy": "AllowTrusted", // to allow all use "AllowAll"
     "AllowedOrigins": [
