--- a/backend/nestin/Nestin.Api/appsettings.json
+++ b/backend/nestin/Nestin.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=DESKTOP-GKLS84P\\SQLEXPRESS;Initial Catalog=Final_Project;Integrated Security=True;Encrypt=True;Trust Server Certificate=True" // Replace this dummy placeholder with your database connection
+        "DefaultConnection": "Data Source=.;Initial Catalog=nestin;Integrated Security=True;Encrypt=True;Trust Server Certificate=True" // Replace this dummy placeholder with your database connection
     },
   "Cors": {
     "Policy": "AllowTrusted", // to allow all use "AllowAll"
